--- a/sites/all/themes/wttoc/sass/components/off-canvas.scss
+++ b/sites/all/themes/wttoc/sass/components/off-canvas.scss
@@ -2,16 +2,21 @@
  * Off Canvas portion adapted from the Off Canvas Layout
  ******************************************************************************/
 
+/*
+ * Responsive Behavior
+ */
 .l-off-canvas-show, .l-off-canvas-hide {
 	display: none;
 	position: absolute;
 	top: 5px - 1px;
 	right: 0;
 	z-index: 51;
-	width: $superheaderMinHeight - 5px;
-	height: $superheaderMinHeight - 5px;
 	background: transparent url("#{$pathToTheme}/images/close.png") center center no-repeat;
 	@include accesibleHide;
+	left:initial;
+	overflow:visible;
+	width: 40px;
+	height: $superheaderMinHeight - 5px;
 }
 .l-off-canvas-show {
 	background: transparent url("#{$pathToTheme}/images/menu.png") center center no-repeat;
@@ -28,6 +33,9 @@
 		}
 		.l-off-canvas-hide {
 			display: block;
+		}
+		&:target .l-region{
+			overflow:visibile;
 		}
 		&:not(:target) {
 			.l-region {
@@ -49,18 +57,22 @@
 		height: 100%;
 		padding-left: 0%;
 	}
+	.js .l-superheader{
+	}
 	.js .l-off-canvas {
 		position: absolute;
 		z-index: 99;
 		width: 80%;
 		top: 0;
 		bottom: 0;
-		left:-68%;
 		@include breakpoint($mobile2Tablet){
 			left: -73%;
 		};
 		@include breakpoint($mini2Mobile){
-			left: -71%;
+			left: -69%;
+		};
+		@include breakpoint(0 $breakpointMini){
+			left:-63%;
 		};
 		@include cssTransition(left 0.2s ease-in);
 		cursor: pointer;
@@ -69,8 +81,8 @@
 			left: 0;
 			cursor: auto;
 			height:auto;
-			@include backgroundOpacity($DARKGRAY , 0.92);
 			.l-region--navigation{
+				@include backgroundOpacity($DARKGRAY , 0.92);
 				display: block;
 				padding-top: $superheaderMinHeight;
 			}
@@ -86,6 +98,98 @@
 		}
 		.l-off-canvas-show {
 			display: block;
+		}
+	}
+}
+
+/*
+ * Navigation Region Styling
+ */
+@include breakpoint(0 $breakpointTablet){
+	//JS Side Menu
+	.js .l-off-canvas.is-visible{
+		.l-region--navigation{
+			@include colorDescendantsFont($WHITE)
+		}
+	}
+	//No JS Fallback: In Place Menu
+	.no-js .l-off-canvas{
+		@include colorDescendantsFont($BLACK)
+	}
+}
+@include breakpoint($breakpointTabletP1){
+	.l-region--navigation{
+		@include clearfix;
+		.block__title{
+			@include accesibleHide;
+		}
+		ul.menu, ul.menu li{
+			list-style:none;
+			a{
+				text-decoration:none;
+			}
+		}
+		@include clearfix;
+		> div > ul.menu, > nav > ul.menu, > ul.menu{
+			@include clearfix;
+			padding-top:20px;
+			//First Level Items
+			> li{
+				position:relative;
+				display:block;
+				float:left;
+				> a, > div, > span{
+					color:$DARKGRAY;
+					padding:20px 25px 30px 25px;
+					display:block;
+					&:hover, &.active{
+						background-color:$color1;
+						color:$WHITE;
+						border-bottom: 1px solid $color1Dark;
+						margin-bottom: -1px;
+						margin-top: 1px;
+					}
+				}
+				//Second Level Container
+				> ul{
+					display:none;
+					@include colorDescendantsFont($DARKGRAY);
+					background-color:$color1Light;
+					position: absolute;
+					top: 100%;
+					margin-top:1px;
+					left: 0;
+					z-index: 52;
+					float: left;
+					min-width:150px;
+					text-align: left;
+					> li{
+						> a, > div, > span{
+							padding:10px 20px;
+							display:block;
+						}
+						&:hover, &.active{
+							background-color:$color1Dark;
+							a{
+								color:$WHITE;
+							}
+						}
+						border-bottom:1px solid $color1Dark;
+						&.last{
+							border-bottom:0;
+						}
+					}
+					//disable third (or higher) level menu visibility
+					ul{
+						display:none;
+					}
+				}
+				&:hover > ul{
+					display:block;
+
+				}
+			}
+
 		}
 	}
 }
