--- a/sites/all/themes/wttoc/sass/variables/variables.scss
+++ b/sites/all/themes/wttoc/sass/variables/variables.scss
@@ -5,7 +5,7 @@ $defaultWindowSize: 1100px;
 $columnPercentSpacer:1%;
 $logoMobileHeight:40px;
 $pathToTheme:"/sites/all/themes/wttoc";
-$superheaderMinHeight:40px;
+$superheaderMinHeight:60px;
 /*
  * Breakpoints
  */
@@ -51,6 +51,7 @@ $fontM:1.9;
 $fontS:1.7;
 $fontXS:1.5;
 $fontXXS:1.3;
+$fontXXXS:1.1;
 
 /*
  * Colors
@@ -71,5 +72,14 @@ $color1Light:#C3DAE3;/*Light Blue Gray*/
 $color1Dark:#015063;/*Dark Blue Gray*/
 $colorAlt:#E792B5;/*Dull Pink*/
 
+/*
+ * Other Possible Palette
+ * $color1:#aa6c39;
+ * $color2:#aa9b39;
+ * $color3:#7d2a69;
+ * $color1Light:#d49a6a;
+ * $color1Dark:#804515;
+ * $colorAlt:#5a5;
+ */
 
 
