--- a/sites/all/themes/wttoc/sass/wttoc.reset.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.reset.scss
@@ -48,3 +48,18 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/*
+ * Img Reset
+ */
+img{
+	width:auto;
+	height:auto;
+}
+
+/*
+ * Active Link Reset
+ */
+a.active{
+	color:inherit
+}
