omega .info & small css adjustments

--- a/sites/all/themes/wttoc/css/wttoc.styles.css
+++ b/sites/all/themes/wttoc/css/wttoc.styles.css
@@ -112,6 +112,10 @@ a {
     display: table;
     clear: both; }
 
+@media (min-width: 768px) {
+  .l-header {
+    border-bottom: 1px; } }
+
 .l-header, .l-footer {
   margin-left: auto;
   margin-right: auto; }
