--- a/sites/all/themes/wttoc/sass/components/components.scss
+++ b/sites/all/themes/wttoc/sass/components/components.scss
@@ -8,6 +8,11 @@
 	margin-bottom: 20px;
 	@include clearfix;
 }
+.l-header{
+	@include breakpoint($breakpointTablet){
+		border-bottom:1px;
+	};
+}
 .l-header, .l-footer{
 	margin-left: auto;
 	margin-right: auto;
