--- a/sites/all/themes/wttoc/css/wttoc.styles.css
+++ b/sites/all/themes/wttoc/css/wttoc.styles.css
@@ -114,7 +114,7 @@ a {
 
 @media (min-width: 768px) {
   .l-header {
-    border-bottom: 1px; } }
+    padding-bottom: 1px; } }
 
 .l-header, .l-footer {
   margin-left: auto;
