--- a/sites/all/themes/wttoc/sass/components/components.scss
+++ b/sites/all/themes/wttoc/sass/components/components.scss
@@ -10,7 +10,7 @@
 }
 .l-header{
 	@include breakpoint($breakpointTablet){
-		border-bottom:1px;
+		padding-bottom:1px;
 	};
 }
 .l-header, .l-footer{
