--- a/sites/all/themes/wttoc/sass/wttoc.reset.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.reset.scss
@@ -63,3 +63,10 @@ img{
 a.active{
 	color:inherit
 }
+
+/*
+ * Input Max Width - Keep them inside the screen in all circumstances
+ */
+input{
+	max-width:95%;
+}
