--- a/sites/all/themes/wttoc/sass/wttoc.reset.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.reset.scss
@@ -70,3 +70,12 @@ a.active{
 input{
 	max-width:95%;
 }
+
+/*
+ * Responsive Tables - Focus On Full Support
+ */
+table{
+  overflow-x: auto;
+  display: block;
+}
+
