--- a/sites/all/themes/wttoc/css/wttoc.reset.css
+++ b/sites/all/themes/wttoc/css/wttoc.reset.css
@@ -16,8 +16,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
   line-height: 1; }
 
-ol, ul {
-  list-style: none; }
+body ol, body ul, body ol.menu, body ul.menu {
+  list-style: none;
+  list-style-position: inside; }
 
 blockquote, q {
   quotes: none; }
