--- a/sites/all/themes/wttoc/sass/components/off-canvas.scss
+++ b/sites/all/themes/wttoc/sass/components/off-canvas.scss
@@ -66,10 +66,10 @@
 		top: 0;
 		bottom: 0;
 		@include breakpoint($mobile2Tablet){
-			left: -73%;
+			left: -71%;
 		};
 		@include breakpoint($mini2Mobile){
-			left: -69%;
+			left: -67%;
 		};
 		@include breakpoint(0 $breakpointMini){
 			left:-63%;
@@ -109,14 +109,16 @@
 	//JS Side Menu
 	.js .l-off-canvas.is-visible{
 		.l-region--navigation{
-			@include colorDescendantsFont($WHITE)
+			@include colorDescendantsFont($WHITE);
 		}
 	}
 	//No JS Fallback: In Place Menu
 	.no-js .l-off-canvas{
-		@include colorDescendantsFont($BLACK)
+		@include colorDescendantsFont($BLACK);
+		min-height: 2 * $logoMobileHeight;
 	}
 }
+//Full Menu
 @include breakpoint($breakpointTabletP1){
 	.l-region--navigation{
 		@include clearfix;
@@ -131,6 +133,9 @@
 		}
 		@include clearfix;
 		> div > ul.menu, > nav > ul.menu, > ul.menu{
+			width: 98%;
+			max-width: $defaultWindowSize * 1.2;
+			margin: 0 auto;
 			@include clearfix;
 			padding-top:20px;
 			//First Level Items
@@ -142,6 +147,9 @@
 					color:$DARKGRAY;
 					padding:20px 25px 30px 25px;
 					display:block;
+					border-bottom: 1px solid transparent;
+					margin-bottom: -1px;
+					margin-top: 1px;
 					&:hover, &.active{
 						background-color:$color1;
 						color:$WHITE;
