--- a/sites/all/themes/wttoc/sass/abstractions/abstractions.scss
+++ b/sites/all/themes/wttoc/sass/abstractions/abstractions.scss
@@ -226,6 +226,7 @@
 		border-color: $bordersColor;
 		background: $headerBackground;
 		color: $headerTextColor;
+		border-radius:0;
 	}
 	.ui-selectmenu-button span.ui-selectmenu-text{
 		color: $headerTextColor;
